@@ -1,4 +1,4 @@
 # -*- tcl -*-
 
-package ifneeded tooltip  1.4.3 [list source [file join $dir tooltip.tcl]]
+package ifneeded tooltip  1.4.4 [list source [file join $dir tooltip.tcl]]
 package ifneeded tipstack 1.0 [list source [file join $dir tipstack.tcl]]
